# nalai

./: .actrc  .coverage  .dockerignore  .gitignore  CODEOWNERS  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  Dockerfile.dev  LICENSE  Makefile  README.md  SUPPORT.md  docker-compose.yml  logging.yaml  pyproject.toml  trivy-results.sarif
.ci/: create_and_push_image.sh  increment_version.sh  update_deployment_config.sh  version_utils.sh
.ci/test/: run-bats-tests.sh  setup-bats.sh  test-pipeline-bats.bats  test-version-management.bats
.github/: PULL_REQUEST_TEMPLATE.md  act-test.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  security_vulnerability.md
.github/workflows/: ci-cd.yml  feature-branch.yml  main-validation.yml  pr-check.yml  pr-validation.yml  quality-gate.yml  release-pipeline.yml
data/api_specs/: api_summaries.yaml  ecommerce_api.yaml
data/word_corpus/: fallback_adjectives.txt  fallback_antonyms.txt  fallback_nouns.txt  fallback_verbs.txt
demo/: Dockerfile  mock_ecommerce_service.py  simple_ui.html
demo/ui/: ai-chat.html  index.html  script.js  styles.css
demo/ui/modules/: api.js  api_responses_json.js  api_responses_sse.js  app.js  config.js  conversations.js  conversationsManager.js  debug.js  dom.js  errorHandler.js  eventParser.js  events.js  index.js  interrupts.js  logger.js  messages.js  network.js  responseStateMachine.js  responses.js  (+6 more)
docs/: access-control-architecture.md  agent_api_providers.md  api-responses-input-examples.md  architecture-decisions.md  cache-security-analysis.md  ci-cd-consistency.md  cicd-developers.md  cicd-devops.md  container-optimization.md  content-structure-difference.md  conversation-checkpointing.md  conversations-management-ui.md  creating_webp_from_mov.md  delete-conversations-feature.md  development.md  docker-images.md  environment-setup.md  example-prompts.md  github-actions-setup.md  github-actions-testing.md  input-formats-side-by-side.md  input-item-format-example.md  llm_cache.md  local-dev-containers.md  mistral-api-comparison.md  no-cache-feature.md  observability.md  ollama-dev-strategy.md  ollama-setup.md  openai-input-comparison.md  openai._api_compliance.md  pipeline.md  platform-independent-installation.md  response-design-enhancements.md  runtime-data.md  security.md  steaming_api.md  tool-messages-comparison.md  ui-modules.md  version-management.md
scripts/: check_env.sh  generate_prod_requirements.py  install_act.sh  install_base.sh  install_config.py  install_config.yaml  install_docker.sh  install_gh.sh  install_poetry.sh  install_trivy.sh  lint_dependencies.py  setup_nlp_corpus.py  setup_ollama.sh  setup_ollama_advanced.sh  setup_ollama_dev.sh  setup_ui_demo.sh  test-github-actions.sh  test_ollama_dev_strategy.sh  update_tool_versions.py  version_utils_github.sh
scripts/experimental/: README.md  build_wheels.py  generate_clean_requirements.py  production_build.sh
src/api_assistant/: __init__.py  cli.py  config.py
src/nalai/: __init__.py  cli.py  config.py
tests/: __init__.py
tests/integration/: __init__.py  conftest.py  test_cache_integration.py  test_cache_standalone.py  test_cache_with_mocked_llm.py  test_chunk_accumulation.py  test_conversation_lifecycle_integration.py  test_no_cache_header.py  test_similarity_integration.py
tests/unit/: README.md  __init__.py  conftest.py  test_logging_config.py  test_openai_tool_call.py  test_tool_streaming_experiment.py
(+194 files in other folders)
